# kalman-vae

./: .gitignore  .gitmodules  .pre-commit-config.yaml  Kalman-VAE.ipynb  LICENSE  README.md  analyse.ipynb  analyse_covariance.ipynb  analyse_imputation.ipynb  analyse_nonlinear_ssm.ipynb  config.py  dynamics_parameter_network.py  environment.yml  evaluate.py  evaluation.py  kalman_vae.py  misc.py  pyproject.toml  run_evaluation.sh  run_experiment.sh  sample_control.py  ssm.py  state_space_model.py  test_kalman_filter.ipynb  train.ipynb  train.py  train_double.ipynb  train_float.ipynb  vae.py  validate_linear_ssm.ipynb  validate_nonlinear_ssm.ipynb  validate_vae.ipynb  variational_autoencoder.py
examples/: evaluate.py  evaluate_vae.py  run_evaluation.sh  run_training.sh  run_vae_evaluation.sh  train.py  visualize.ipynb
kvae/: config.py  dynamics_parameter_network.py  evaluation.py  kalman_vae.py  sample_control.py  state_space_model.py  variational_autoencoder.py
